--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "css-loader": "^0.28.0",
     "nuxt": "latest",
-    "vue-material": "^0.7.1"
+    "style-loader": "^0.16.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vuetify": "^0.11.1"
   },
   "scripts": {
     "dev": "nuxt",
